--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HI development</title>
-  <link rel="stylesheet" href="code-github\styles\styles.css">
+  <link rel="stylesheet" href="styles\styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
@@ -14,7 +14,7 @@
     <h1>Hilse Industries</h1>
     <h2>Development studio</h2>
 
-    <img class="chip" src="code-github\chip-smol.png" alt="Hilse-Industries-development-logo">
+    <img class="chip" src="chip-smol.png" alt="Hilse-Industries-development-logo">
   </div>
   <div class="about">
     <p class="mememe">A freelance <strong>Web developer</strong> with clear goal to create and maintain websites, using the latest industry software to provide a superior user experience that consistently delivers the customer/readership base the website is seeking to attract.   </p>
@@ -25,7 +25,7 @@
     <li class="hex-3"></li>
   </div>
   <div class="focus">
-    <img class="www-gif" src="code-github\giphy-www.gif" alt="www-gif">
+    <img class="www-gif" src="giphy-www.gif" alt="www-gif">
     <p class="focus-p">Focus on futuristic , trendy design yet simple solutions. I'm keeping up with the news in <strong>design</strong> as well as <strong>coding</strong></p>
   </div>
 </body>
